  jets3t.properties. This makes it easy to create task-specific properties
  files.


TOOLKIT

  * General

- Added support for the new Copy Object functionality that allows you to copy,
  move, rename and update objects in your S3 account. These operations are
  available through the S3Service as the methods copyObject, moveObject,
  renameObject and updateObjectMetadata.
- Added basic support for accessing DevPay S3 accounts. DevPay user and product
  tokens can be provided to the S3Service class directly using the 
  #setDevPayUserToken and #setDevPayProductToken methods, and default token
  values can be specified in the jets3t.properties file using the settings
  "devpay.user-token" and "devpay.product-token".
- Modified Bucket Logging Status changing behaviour to update ACL settings of
  the target bucket before (re)directing log files to the bucket.
- Fixed bug in RestS3Service that caused failures in some circumstances when 
  buckets were created with the "US" location.
- S3Service instances can now be configured individually by providing a
  JetS3tProperties object when constructing the service.
- Added support to FileComparer for listing objects based on prefix "partitions"
  that allow a bucket to be listed by multiple simultaneous threads. This can
  speed up listings for large buckets containing many virtual subdirectories.
  To use multiple partitions when building S3 object maps, configure the
  jets3t.properties item "filecomparer.bucket-listing.<bucketname>" to specify
  a delimiter string and a traversal depth value separated by a comma, eg:
  filecomparer.bucket-listing.my-bucket=/,2
  to partition the bucket my-bucket based on the '/' delimiter to a depth of
  2 virtual subdirectories.


  * REST Implementation

- Added support for the new Copy Object functionality.
- The XML parsing code now copes better when object names contain a carriage 
  return character. A work-around is applied to prevent the Java XML parser